# Peeky

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  deny.toml  ideas.md
.claude/: daniel-card.sh
.claude/commands/: aegis.md  daniel.md  peeky-recap.md  peeky.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ai-tells.yml  ci.yml  coverage.yml  deny.yml  linux.yml  macos.yml  release.yml  windows.yml
aegis/: Cargo.toml
aegis-settings/: index.html
aegis/demos/: demo_github.rs  demo_macos_input.rs  demo_macos_test.rs
aegis/evals/runners/: tool_routing.rs
aegis/examples/: test_find_action_bench.rs  test_github.rs  test_gmail.rs  test_gmail_full.rs  test_hotkey.rs  test_loading.rs  test_point.rs  test_stt.rs  test_stt_bench.rs  test_vision.rs  test_win.rs
aegis/src/: Info.plist  actions.rs  barge_in.rs  intent.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  painter.rs  routelet.rs  single_instance.rs  tray.rs  tuning.rs  upgrade.rs  voice.rs  voice_session.rs
aegis/src/ai_cursor/: hyprland.rs  macos.rs  mod.rs  winit.rs
aegis/src/audio/: input.rs
aegis/src/cursor/: hyprland.rs  winit.rs
aegis/src/desktop/: mod.rs
aegis/src/hotkey/: global_hotkey.rs  mod.rs
aegis/src/input/: macos.rs
aegis/src/integrations/: applescript.rs  gmail.rs  health.rs  mod.rs  safari.rs  spotify.rs  youtube.rs
aegis/src/mouse_position/: hyprland.rs  mod.rs
aegis/src/providers/: claude.rs  invite_code.rs  mod.rs  proxy_contract.rs  stt_deepgram.rs  token_cache.rs  tts_cartesia.rs
aegis/src/providers/claude/: agent_loop.rs  chat.rs  classifier.rs  find_action.rs  integration.rs  memory.rs  mod.rs  parsing.rs
aegis/src/routelet/: redact.rs  sample.rs
aegis/src/screenshot/: crossplatform.rs  grim.rs  macos_permission.rs  mod.rs  xcap.rs
aegis/tests/: preprocess_vectors.json
console/: package-lock.json  package.json
console/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/icons/: icon.icns
console/src-tauri/src/: account.rs  agent.rs  integrations.rs  invite.rs  keychain.rs  keys.rs  main.rs  proxy_contract.rs
console/tests/: onboarding.test.js
console/ui/onboarding/: index.html  onboarding.css  onboarding.js
console/ui/settings-ui/: settings.css  settings.html  settings.js  signin.css  signin.html  signin.js
console/ui/shared/: base.css
demos/: Cargo.toml
docs/: architecture.md  ideas.md  intent-routing.md  memory-architecture.md  optimize.md  testing-macos.md  tts-latency.md  voice-design.md
examples/: list_audio_devices.rs
launcher/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: macos-permissions.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: main.rs
launcher/src/auth/: signin.html  signin.js
launcher/src/onboarding/: index.html  macos.html  onboarding.js
launcher/src/shared/: base.css
launcher/src/welcome/: index.html  welcome.css  welcome.js
memex/: Cargo.toml
models/routelet/: MODEL_CARD.md  embedder.onnx  eval_routelet.py  head.json
peeky/: Cargo.toml
peeky/evals/: README.md
peeky/evals/cases/: tool_routing.json
peeky/src/: agent_cue.rs  barge_in.rs  handoff.rs  intent.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  painter.rs  single_instance.rs  tray.rs  tuning.rs  upgrade.rs  voice_session.rs
peeky/src/ai_cursor/: common.rs  hyprland.rs  macos.rs  platform.rs  renderer.rs  winit.rs
peeky/src/audio/: input.rs  mod.rs  output.rs
peeky/src/desktop/: backend.rs  hyprland.rs  macos.rs  windows.rs
peeky/src/hotkey/: backend.rs  crossplatform.rs  hyprland.rs
peeky/src/input/: backend.rs  hyprland.rs  macos.rs  mod.rs  windows.rs
peeky/src/integrations/: applescript.rs  apps.rs  calendar.rs  clipboard.rs  contacts.rs  facetime.rs  finder.rs  github.rs  gmail.rs  health.rs  keynote.rs  mail.rs  maps.rs  messages.rs  mod.rs  music.rs  notes.rs  photos.rs  reminders.rs  safari.rs  shortcuts.rs  spotify.rs  spotlight.rs  system.rs  type_text.rs  youtube.rs
peeky/src/mouse_position/: backend.rs  crossplatform.rs  hyprland.rs  mod.rs
peeky/src/providers/: device_id.rs  invite_code.rs  mod.rs  proxy_contract.rs  session_jwt.rs  stt_deepgram.rs  tts_cartesia.rs
peeky/src/providers/claude/: chat.rs  find_action.rs  history.rs  integration.rs  memory.rs  mod.rs  parsing.rs  prompt.rs  working_context.rs
peeky/src/routelet/: mod.rs  redact.rs  sample.rs
peeky/src/screenshot/: backend.rs  hyprland.rs  mod.rs  shared.rs
peeky/tests/: preprocess_vectors.json  routing.rs
proxy/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
proxy/migrations/: 0001_create_users.sql  0002_add_stripe_customer.sql
proxy/scripts/: mint-code.sh  mint-jwt.mjs  test-tiers.sh
proxy/src/: constants.ts  http.ts  index.ts  tiers.ts  types.ts  usage.ts
proxy/src/auth/: github.ts  jwt.ts
proxy/src/handlers/: anthropic.ts  stripe.ts  tokens.ts
scripts/: demo.sh  install-hooks.sh  update-binary.sh
src/: actions.rs  audio.rs  cursor.rs  device_id.rs  hotkey.rs  main.rs  mouse.rs  movement.rs  painter.rs  screenshot.rs  voice.rs  windows.rs
src/cursor/: hyprland.rs  mod.rs  winit.rs
src/hotkey/: global_hotkey.rs  mod.rs  unix_signals.rs
src/integrations/: mod.rs  spotify.rs
src/mouse/: crossplatform.rs  hyprland.rs  mod.rs
src/providers/: claude.rs  mod.rs  stt_deepgram.rs  tts_cartesia.rs  tts_openai.rs  whisper_openai.rs
src/screenshot/: grim.rs  mod.rs  xcap.rs
