[package]
name = "aegis"
version = "0.1.0"
edition = "2024"
default-run = "aegis"

[dependencies]
base64 = "0.22.1"
cpal = { version = "0.17.3", features = ["jack"] }
dotenvy = "0.15.7"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_6"] }
gtk4-layer-shell = "0.8.0"
hyprland = "0.4.0-beta.3"
image = "0.25.10"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
