[package]
name = "aegis"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "aegis"

[features]
# Default = current Hyprland-only build. Existing toolchain unchanged.
default = ["hyprland"]
# Linux + Hyprland with full layer-shell polish. Pulls in the Unix-only deps
# (GTK, layer-shell, hyprland-rs IPC, POSIX signals, JACK audio backend).
hyprland = [
    "dep:gtk",
    "dep:gtk4-layer-shell",
    "dep:hyprland",
    "dep:signal-hook",
    "cpal/jack",
]
# winit-based overlay window for X11 / Windows / macOS. Implies crossplatform
# because the winit event loop is where hotkey::poll() drains its receiver.
winit-window = ["dep:winit", "dep:softbuffer", "dep:tiny-skia", "crossplatform"]
# Cross-platform mouse, hotkey, screenshot.
crossplatform = ["dep:xcap", "dep:mouse_position", "dep:global-hotkey"]

[dependencies]
base64 = "0.22.1"
cpal = "0.17.3"
dotenvy = "0.15.7"
futures-util = "0.3.32"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_6"], optional = true }
gtk4-layer-shell = { version = "0.8.0", optional = true }
hound = "3.5.1"
hyprland = { version = "0.4.0-beta.3", optional = true }
image = "0.25.10"
reqwest = { version = "0.13.3", features = ["blocking", "json", "multipart", "stream", "query"] }
rodio = "0.22.2"
serde_json = "1.0.149"
signal-hook = { version = "0.4.4", optional = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-util = { version = "0.7", default-features = false }
global-hotkey = { version = "0.8", optional = true }
mouse_position = { version = "0.1", optional = true }
softbuffer = { version = "0.4", optional = true }
tiny-skia = { version = "0.11", optional = true }
winit = { version = "0.30", optional = true }
xcap = { version = "0.9.4", optional = true }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
rusqlite = { version = "0.39", features = ["bundled", "blob"] }
fast_image_resize = { version = "5", features = ["image"] }
open = "5"
url = "2"
google-gmail1 = "7"
yup-oauth2 = "12"
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http2", "ring"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Binaries are split by which feature set they need. Without these markers,
# `cargo build` tries to compile every binary against every feature combo,
# which fails because (e.g.) `aegis` uses GTK and only makes sense with the
# `hyprland` feature on.

[[bin]]
name = "aegis"
# No required-features: main.rs uses only the module-level abstractions
# (cursor::, hotkey::, mouse::, screenshot::) so any feature combo that
# provides those, hyprland or winit-window+crossplatform, works.

# LLM behavior evals live in evals/runners/, not examples/, so the boundary
# between "stochastic API-calling eval" and "hand-run demo" is obvious from
# the path. Cases (data) live in evals/cases/, results in evals/results/
# (gitignored). Run with `cargo run --bin <name>`.
[[bin]]
name = "eval_tool_routing"
path = "evals/runners/tool_routing.rs"

# Diagnostic and benchmark programs live in demos/, not src/bin/, because
# they aren't part of the production app. Each one exercises a specific
# slice of the pipeline (STT, classifier+find_action, cursor overlay,
# etc.) and is run with `cargo run --bin <name>`. demo_* are hand-run
# verifications; bench_* report latency stats across N iterations.
[[bin]]
name = "demo_hotkey"
path = "demos/demo_hotkey.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_point"
path = "demos/demo_point.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_stt"
path = "demos/demo_stt.rs"
required-features = ["hyprland"]

[[bin]]
name = "bench_stt"
path = "demos/bench_stt.rs"
required-features = ["hyprland"]

[[bin]]
name = "bench_find_action"
path = "demos/bench_find_action.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_vision"
path = "demos/demo_vision.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_win"
path = "demos/demo_win.rs"
required-features = ["winit-window"]

[[bin]]
name = "demo_soundwave"
path = "demos/demo_soundwave.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_loading"
path = "demos/demo_loading.rs"
required-features = ["hyprland"]

[[bin]]
name = "demo_gmail"
path = "demos/demo_gmail.rs"

[[bin]]
name = "demo_gmail_full"
path = "demos/demo_gmail_full.rs"

[[bin]]
name = "demo_github"
path = "demos/demo_github.rs"
