[package]
name = "aegis"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
default-run = "aegis"

[features]
# `hyprland` is default-on and pulls the Linux-only backend deps (GTK
# layer-shell, Hyprland IPC, signal hotkeys). Those deps are also
# Linux-target-scoped below, so the feature is a no-op on macOS/Windows: a
# plain `cargo build` there picks the winit + portable-crate path with nothing
# extra to enable. To build that same winit path on Linux (e.g. CI, or to
# exercise the macOS/Windows code), drop the feature: `--no-default-features`.
default = ["hyprland"]
hyprland = ["dep:gtk", "dep:gtk4-layer-shell", "dep:hyprland", "dep:signal-hook"]

[dependencies]
base64 = "0.22.1"
cpal = "0.17.3"
dotenvy = "0.15.7"
futures-util = "0.3.32"
hound = "3.5.1"
image = "0.25.10"
reqwest = { version = "0.13.3", features = ["blocking", "json", "multipart", "stream", "query"] }
rodio = "0.22.2"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-util = { version = "0.7", default-features = false }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
fast_image_resize = { version = "5", features = ["image"] }
open = "5"
url = "2"
google-gmail1 = "7"
yup-oauth2 = "12"
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http2", "ring"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Crossplatform overlay (winit + softbuffer + tiny-skia) and portable backends
# (xcap, global-hotkey, mouse_position). Unconditional: needed on macOS/Windows,
# and on Linux when built `--no-default-features`. They build fine on Linux even
# when the Hyprland backend is the one selected, just unused.
global-hotkey = "0.8"
mouse_position = "0.1"
softbuffer = "0.4"
tiny-skia = "0.11"
winit = "0.30"
xcap = "0.9.4"

# Linux-only deps. The GTK layer-shell overlay, Hyprland IPC, and signal
# hotkeys are optional + behind the `hyprland` feature, so a Linux build with
# `--no-default-features` skips them (and the C libs they'd need). The JACK
# cpal backend is unioned onto the base cpal on all Linux builds.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_6"], optional = true }
gtk4-layer-shell = { version = "0.8.0", optional = true }
hyprland = { version = "0.4.0-beta.3", optional = true }
signal-hook = { version = "0.4.4", optional = true }
cpal = { version = "0.17.3", features = ["jack"] }

# macOS-only renderer: softbuffer's macOS backend strips alpha at the
# CGImage level (CGImageAlphaInfo::NoneSkipFirst), so we use wgpu instead
# for the cursor overlay's pixel presentation. wgpu's CompositeAlphaMode::
# PostMultiplied honors per-pixel alpha against the desktop. objc2 +
# raw-window-handle remain for any residual NSWindow plumbing.
# objc2-core-graphics provides native CGEvent APIs for input injection.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
raw-window-handle = "0.6"
wgpu = "22"
bytemuck = "1"
pollster = "0.4"

# Demo and benchmark binaries live in the sibling `aegis-demos` crate
# (../demos), which depends on this library. Keeping them out of this package
# means `cargo build`/`test -p aegis` never compiles them, so the main app
# builds per-OS with no feature flags.
