[package]
name = "memex"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Personal data layer. Background daemon that ingests the user's data (Gmail, chat history, code, etc.) into a local store and exposes it over a localhost HTTP API for clients like aegis to query semantically or via SQL."

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
