[package]
name = "launcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Aegis launcher and onboarding window"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
